members/jud1thDev/season-2/submissions/week-03/XS-005/solution.tf
# Generated by finops_agent
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}


# ═══════════════════════════════════════════════════════════════
# Component 1/2 · seeded from L3-029
# ═══════════════════════════════════════════════════════════════

resource "aws_instance" "comp1_instance-v5u2ym" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-v5u2ym"
  }
}

resource "aws_instance" "comp1_instance-a4957a" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-a4957a"
  }
}

resource "aws_instance" "comp1_instance-b552ti" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-b552ti"
  }
}

resource "aws_instance" "comp1_instance-vgz8r0" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-vgz8r0"
  }
}

resource "aws_instance" "comp1_instance-pntf0w" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-pntf0w"
  }
}

resource "aws_nat_gateway" "comp1_nat-gateway-o8ifim" {
  allocation_id = aws_eip.comp1_nat-gateway-o8ifim_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway-o8ifim"
  }
}

resource "aws_eip" "comp1_nat-gateway-o8ifim_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-o8ifim-eip"
  }
}

resource "aws_instance" "comp1_instance-0qvc9u" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-0qvc9u"
  }
}

resource "aws_instance" "comp1_instance-qlyesh" {
  ami           = "ami-0abcdef1234567890"
  instance_type = "m5.xlarge"
  subnet_id     = aws_subnet.main.id

  root_block_device {
    volume_type           = "gp3"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    Name        = "instance-qlyesh"
  }
}

resource "aws_vpc_endpoint" "comp1_vpc-endpoint-i0ug9h" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.${data.aws_region.current.name}.s3"
  vpc_endpoint_type = "Gateway"

  tags = {
    Name = "vpc-endpoint-i0ug9h"
  }
}

# ═══════════════════════════════════════════════════════════════
# Component 2/2 · seeded from L3-025
# ═══════════════════════════════════════════════════════════════

resource "aws_nat_gateway" "comp2_nat-gateway-r4cxxz" {
  allocation_id = aws_eip.comp2_nat-gateway-r4cxxz_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway-r4cxxz"
  }
}

resource "aws_eip" "comp2_nat-gateway-r4cxxz_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-r4cxxz-eip"
  }
}

resource "aws_subnet" "comp2_subnet-lc4a0n_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lc4a0n-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-lc4a0n_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lc4a0n-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-lc4a0n_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lc4a0n-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_subnet" "comp2_subnet-lnr0s8_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lnr0s8-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-lnr0s8_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lnr0s8-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-lnr0s8_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-lnr0s8-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_subnet" "comp2_subnet-cp1x6o_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-cp1x6o-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-cp1x6o_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-cp1x6o-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-cp1x6o_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-cp1x6o-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_route_table" "comp2_route-table-7rc8oa" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-7rc8oa"
  }
}
resource "aws_route_table" "comp2_route-table-9vg41t" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-9vg41t"
  }
}
resource "aws_route_table" "comp2_route-table-bkmijw" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-bkmijw"
  }
}
resource "aws_nat_gateway" "comp2_nat-gateway-vxn7cr" {
  allocation_id = aws_eip.comp2_nat-gateway-vxn7cr_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway-vxn7cr"
  }
}

resource "aws_eip" "comp2_nat-gateway-vxn7cr_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-vxn7cr-eip"
  }
}

resource "aws_nat_gateway" "comp2_nat-gateway-6pwtsc" {
  allocation_id = aws_eip.comp2_nat-gateway-6pwtsc_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway-6pwtsc"
  }
}

resource "aws_eip" "comp2_nat-gateway-6pwtsc_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-6pwtsc-eip"
  }
}

resource "aws_nat_gateway" "comp2_nat-gateway-7q2ybh" {
  allocation_id = aws_eip.comp2_nat-gateway-7q2ybh_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "nat-gateway-7q2ybh"
  }
}

resource "aws_eip" "comp2_nat-gateway-7q2ybh_eip" {
  domain = "vpc"

  tags = {
    Name = "nat-gateway-7q2ybh-eip"
  }
}

resource "aws_subnet" "comp2_subnet-v3k26c_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-v3k26c-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-v3k26c_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-v3k26c-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-v3k26c_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-v3k26c-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_subnet" "comp2_subnet-pg9uxk_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-pg9uxk-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-pg9uxk_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-pg9uxk-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-pg9uxk_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-pg9uxk-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_subnet" "comp2_subnet-m91rll_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "ap-northeast-2a"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-m91rll-ap-northeast-2a"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-m91rll_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "ap-northeast-2b"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-m91rll-ap-northeast-2b"
    Type = "private"
  }
}
resource "aws_subnet" "comp2_subnet-m91rll_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/20"
  availability_zone = "ap-northeast-2c"

  map_public_ip_on_launch = false

  tags = {
    Name = "subnet-m91rll-ap-northeast-2c"
    Type = "private"
  }
}

resource "aws_route_table" "comp2_route-table-2m32ir" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-2m32ir"
  }
}
resource "aws_route_table" "comp2_route-table-hveyyx" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-hveyyx"
  }
}
resource "aws_route_table" "comp2_route-table-lil3fd" {
  associated_subnets = "same_az_private"

  tags = {
    Name = "route-table-lil3fd"
  }
}


data "aws_region" "current" {}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_7rc8oa" {
  route_table_id  = aws_route_table.comp2_route-table-7rc8oa.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_9vg41t" {
  route_table_id  = aws_route_table.comp2_route-table-9vg41t.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_bkmijw" {
  route_table_id  = aws_route_table.comp2_route-table-bkmijw.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_2m32ir" {
  route_table_id  = aws_route_table.comp2_route-table-2m32ir.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_hveyyx" {
  route_table_id  = aws_route_table.comp2_route-table-hveyyx.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}


resource "aws_vpc_endpoint_route_table_association" "s3_gateway_assoc_comp2_route_table_lil3fd" {
  route_table_id  = aws_route_table.comp2_route-table-lil3fd.id
  vpc_endpoint_id = aws_vpc_endpoint.comp1_vpc-endpoint-i0ug9h.id
}
